--- a/environment.yml
+++ b/environment.yml
@@ -7,10 +7,13 @@ dependencies:
   - pandas=2.2.2
   - requests=2.32.3
   - matplotlib=3.8.0
+  - pyqt=5.12.3
+  - pymol-open-source=3.0.0
   - pip
   - pip:
-      - pyqt5
+      - qasync
       - scikit-learn
       - imbalanced-learn
       - biopython==1.84
       - ansi2html
+      - py3Dmol
